# vita-launcher

./: CMakeLists.txt
src/: config.cpp  fs.cpp  game.cpp  gui.cpp  ime_dialog.cpp  launcher.cpp  main.cpp  textures.cpp  textures.h
